# BrowerDBParser_MCP

./: README.md  mcp_server.py  pyproject.toml
