[project]
name = "browser-db-parser-mcp"
version = "1.0.0"
description = "MCP server for parsing browser history SQLite files"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
